syntax = "proto3";

option csharp_namespace = "ProductService";

package products;

service ProductsService {
  rpc Add (ProductAddRequest) returns (ProductReply);
  rpc Update (ProductRequest) returns (ProductReply);
  rpc FindById (ProductIdRequest) returns (ProductReply);
  rpc FindAll (Empty) returns (ProductReplyArray);
  rpc Remove (ProductIdRequest) returns (Info);
}

message Empty {}

message Info
{
  string message = 1;
}

message ProductIdRequest {
  string id = 1;
}

message ProductRequest {
  
  string id = 1;
  string description = 2;
  double price = 3;
}

message ProductAddRequest {
  string description = 1;
  double price = 2; 
}

message ProductReply {
  string id = 1;
  string description = 2;
  double price = 3;
}

message ProductReplyArray {
  repeated ProductReply ProductReply = 1;
}
